# todo

./: .env.exemple  .gitignore  LICENSE  README.md  database.sqlite  pyproject.toml  run.py  setup.sh
todo/: __main__.py  admin.json  admin_data.py  config.py  main.py  models.py  routes.py
todo/api/: handlers.py  schemas.py
todo/api/action/: __init__.py  todo.py  user.py
todo/database/: __init__.py  base.py  dals.py  initializer.py  models.py
todo/templates/todo/: admin_profile.html  blank_title.html  header.html  index.html  layout.html  log_in.html  log_in_admin.html  profile.html  sign_up.html
