[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["AntonZimyanin <zimyanin88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
sqlalchemy = "^2.0.15"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
python-multipart = "^0.0.6"
pre-commit = "^3.3.2"
aioredis = "^2.0.1"
fastapi-admin = "^1.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
